Fix layout issues on mobile devices

--- a/static/style.css
+++ b/static/style.css
@@ -28,9 +28,11 @@
 body, html {
   height: 100%;
   background-color: var(--color-bg);
+  overflow-x: hidden;
 }
 
 p, h1, h2, h3, h4, h5, h6, input {
+  overflow-wrap: break-word;
   color: var(--color-fg);
 }
 
@@ -119,6 +121,7 @@ dd {
 div.figure > div {
   display: inline-block;
   box-shadow: 1px 1px 2px var(--color-neutral);
+  overflow-x: auto;
 }
 div.figure > div > p.caption {
   padding: 5px;
@@ -186,6 +189,9 @@ table.toc td {
 }
 .grid.vertical.reverse {
   flex-direction: column-reverse;
+}
+.grid.nowrap {
+  flex-wrap: nowrap;
 }
 .grid.narrow {
   max-width: 1200px;
@@ -555,12 +561,11 @@ table.toc td {
 #sidebar > nav .content {
   width: calc(var(--nav-extent) - 60px);
 }
-#sidebar h2, #sidebar h3, #sidebar h4 {
+#sidebar label p {
   text-align: center;
-  border: none;
-  margin: 0px;
 }
 
 #page {
   padding: 0px 20px 20px 20px;
+  overflow-y: hidden;
 }
